# stats386_final_movies

./: .gitignore  README.md  _quarto.yml  documentation.qmd  index.qmd  main.py  pyproject.toml  technicalReport.qmd  tutorial.qmd
docs/: documentation.html  index.html  search.json  technicalReport.html  tutorial.html
docs/src/stats386_final_movies/dataLoading/: datacleaning.html
src/stats386_final_movies/: __init__.py  analysis_and_visualization.py  app.py
src/stats386_final_movies/dataLoading/: clean_movie_data.py  cleaned_movies.json  datacleaning.ipynb  getMovieData.py  getMovieIDs.py  ids.txt  peek_movies.py
