[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"


[project]
name = "stats386-final-movies"
version = "0.1.0"
description = "A movie analysis package contianing a dataset and functions for analysis."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []
